updated reviews validation
